--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link rel="stylesheet" href="../styles/templateStyle.css">
+<link rel="stylesheet" href="./Into/styles/templateStyle.css">
 </head>
 <body>
     <h1>My resume</h1>
