--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <head>
-<link rel="stylesheet" href="./Into/styles/templateStyle.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Intro/styles/index-style.css">
+    <title>Resume</title>
+
 </head>
 <body>
-    <h1>My resume</h1>
+    <div class="align-intro">
+        <object data="./Intro/template/my-introduction-card.html">
+        </object>
+    </div>
+    
 </body>
